--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Fboauth</title>
   <base href="/">
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
